@@ -1,5 +1,18 @@
 ======================================================================
 
+If you are upgrading from a release of TMDA < 0.65:
+
+* When doing program deliveries to procmail, you should no longer be
+  using the ``-f'' option. e.g,
+
+  DELIVERY = "|/usr/bin/procmail -f $SENDER ~/.procmailrc-tmda"
+
+  becomes
+
+  DELIVERY = "|/usr/bin/procmail ~/.procmailrc-tmda"
+
+======================================================================
+
 If you are upgrading from a release of TMDA < 0.63:
 
 * Python version 2.1 or greater is now required.  Upgrade at
