@@ -31,7 +31,7 @@
 #DELIVERY = "~/Mailbox"
 #DELIVERY = "/var/mail/jasonrm"
 #DELIVERY = "|/usr/bin/maildrop"
-#DELIVERY = "|/usr/bin/procmail -f $SENDER ~/.procmailrc-tmda"
+#DELIVERY = "|/usr/bin/procmail ~/.procmailrc-tmda"
 #DELIVERY = "me@new.job.com"
 
 #RECIPIENT_DELIMITER = "-"
