@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Nov  1 15:46:08 2002 -->
+<!-- Fri Nov  8 13:23:05 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -858,7 +858,7 @@ Examples:
 <code>DELIVERY = "~/Mailbox"</code><br>
 <code>DELIVERY = "/var/mail/jasonrm"</code><br>
 <code>DELIVERY = "|/usr/bin/maildrop"</code><br>
-<code>DELIVERY = "|/usr/bin/procmail -f $SENDER ~/.procmailrc-tmda"</code><br>
+<code>DELIVERY = "|/usr/bin/procmail ~/.procmailrc-tmda"</code><br>
 <code>DELIVERY = "me@new.job.com"</code>
 <br><br>
 No default for non-qmail users.
