@@ -1,3 +1,8 @@
+2002-11-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* Deliver.py (Deliver.deliver): Retain From_ when doing a program
+	delivery.
+
 2002-11-03  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>
 
 	* AutoResponse.py (AutoResponse.create): Add Version.CODENAME to
